# maestro

./: .gitignore  AGENTS.md  LICENSE  README.md  justfile  kimi_stdin.txt  metadata.json  next.config.ts  package-lock.json  package.json  setup.ps1  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
components/: AgentConsoleInput.tsx  AgentManager.tsx  ApprovalPrompt.tsx  CodeEditor.tsx  FileViewer.tsx  KimiStatusBar.tsx  LeftSidebar.tsx  MarkdownRenderer.tsx  NomoFileIcon.tsx  SettingsModal.tsx  StreamingMarkdownRenderer.tsx  ToolCallCard.tsx  WelcomeScreen.tsx  WorkspaceFooter.tsx
contexts/: WorkspaceContext.tsx
hooks/: use-mobile.ts  useAgentProcess.ts  useAgentStore.ts  useFileSystem.ts  useKimiWire.ts
lib/: agent-platforms.ts  ansi.ts  nomo-icons.ts  terminal-parser.ts  utils.ts
public/: site.webmanifest  splash.html
src-tauri/: Cargo.toml  tauri.conf.json  test_vt100_send
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: kimi_wire.rs  main.rs  pty.rs
