[package]
name = "ai-studio-applet"
version = "0.1.0"
description = "AI Agent CLI Wrapper and Code Review Dashboard"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-store = "2.4.3"
tokio = { version = "1.52.1", features = ["sync", "rt-multi-thread", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
